--- a/shop.html
+++ b/shop.html
@@ -212,7 +212,6 @@
     <h4 class="p-price">$199.8</h4>
     <button class="buy-btn">Buy Now</button>
 </div>
-
 <div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
     <img class="img-fluid mb-3" src="assets/imgs/featured11.jpeg"/>
     <div class="star">
@@ -226,7 +225,6 @@
     <h4 class="p-price">$100</h4>
     <button class="buy-btn">Buy Now</button>
 </div>
-
 <div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
   <img class="img-fluid mb-3" src="assets/imgs/featured12.jpeg"/>
   <div class="star">
@@ -239,7 +237,8 @@
   <h5 class="p-name">Luxury Jacket</h5>
   <h4 class="p-price">$199.8</h4>
   <button class="buy-btn">Buy Now</button>
-</div><div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
+</div>
+<div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
     <img class="img-fluid mb-3" src="assets/imgs/featured13.jpeg"/>
     <div class="star">
         <i class="fas fa-star"></i>
@@ -252,7 +251,6 @@
     <h4 class="p-price">$199.8</h4>
     <button class="buy-btn">Buy Now</button>
 </div>
-
 <div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
     <img class="img-fluid mb-3" src="assets/imgs/featured14.jpeg"/>
     <div class="star">
@@ -266,7 +264,6 @@
     <h4 class="p-price">$199.8</h4>
     <button class="buy-btn">Buy Now</button>
 </div>
-
 <div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
     <img class="img-fluid mb-3" src="assets/imgs/featured15.jpeg"/>
     <div class="star">
@@ -280,9 +277,8 @@
     <h4 class="p-price">$100</h4>
     <button class="buy-btn">Buy Now</button>
 </div>
-
 <div class="product text-center col-12 col-sm-6 col-md-4 col-lg-3"> 
-  <img class="img-fluid mb-3" src="assets/imgs/featured16.jpeg"/>
+  <img class="img-fluid mb-3" src="assets/imgs/featured15.jpeg"/>
   <div class="star">
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
@@ -290,10 +286,12 @@
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
   </div>
-  <h5 class="p-name">Luxury Jacket</h5>
-  <h4 class="p-price">$199.8</h4>
+  <h5 class="p-name">Bomber Jacket</h5>
+  <h4 class="p-price">$100</h4>
   <button class="buy-btn">Buy Now</button>
 </div>
+
+
 
     <nav aria-label="Page navigation example">
         <ul class="pagination mt-5">
